app/styles/templates/_client_information.scss
.client-information{
  .type-of-id-text{
    margin-bottom: .2rem;
    margin-top: 1rem;
  }
  .id-confidential-text{
    font-size: 0.7rem;
  }
  .id-type-radio-input{
    .custom_radio_buttons {
      border: 1px solid;
      padding: .4rem;
      margin-top: 1rem;
      height: 2.7rem;
      input[type=radio] {
        margin: 0 0 0 0px;
      }
      label {
        @media #{$small-only} {
          font-size: 0.8rem;
          margin-top: 0.4rem;
        }
      }
    }
  }
  .client-name-labels{
    padding-top: 1rem;
    padding-bottom: 0.5rem;
    label{
      font-size: .7rem;
    }
  }
  .client-name-inputs{
    padding-right: 0.8rem;
  }
}
div .hk-id{
  #hk-id-number, #hk-id-firstName, #hk-id-lastName {
    height: 2.7rem;
    padding: 0 0.5rem;
    width: 97%;
    background: #002352t;
    border: 1px solid $tabbar-menu-icon-color;
    color: white;
    height: 2.7rem !important;
    margin-bottom: 0;
  }

  .input-error {
    background: #ED4C4E;
    color: white;
    padding: 0.2rem;
    margin-right: 0.5rem;
    margin-top: 0rem;
    display: none;
    padding-bottom: 0.25rem !important;
    width: 98.5%;
  }

  label{
    font-size: 1.8rem;
  }
  .hk-id-input{
    width: 25%
  }
  .x-with-brackets{
    font-size: 1.7rem;
  }
}

#title input{
  height: 2.7rem;
  padding: 0 0.5rem;
  width: 97%;
  background: #002352;
  border: 1px solid $tabbar-menu-icon-color;
  color: white;
  height: 2.7rem !important;
  margin-bottom: 1rem;
}

.client_title, .client_last_name, .client_first_name{
  select, input{
    width: 3rem;
    height: 2.7rem;
    padding: 0 0.5rem;
    width: 97%;
    background: #002352;
    border: 1px solid $tabbar-menu-icon-color;
    color: white;
    height: 2.7rem !important;
    margin-bottom: 0;
  }

  input{
    margin-top: 0.3rem;
  }

  label{
    @media #{$small-only} {
      font-size: 0.8rem;
    }
  }
}

.input-error {
  background: #ED4C4E ;
  color: white;
  display: none;
  padding: 0.2rem;
  padding-bottom: 0.25rem !important;
  width: 96.5%;
}

.goods_details{
  a.crossroads_email{
    text-decoration: underline;
  }
}

